<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">

    <!-- First Box -->

    <ListView
        android:id="@+id/about_list1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:listSelector="@color/transparent"
        style="@style/RVListViewDialogGroupTheme" />

</LinearLayout>
