<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="80dp"
    android:background="@drawable/list_selector_background">

    <LinearLayout
        android:id="@+id/grouplayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        >

        <ImageView
            android:id="@+id/img_folder_chek"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginRight="@dimen/dp_4"
            android:background="@drawable/folders_uncheck" />

        <!-- group name -->
        <TextView
            android:id="@+id/tvgroupname"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/size01_lineheight"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/text_selector_01"
            android:textSize="@dimen/size01"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_16"
            android:background="@drawable/button_arrowright" />

    </LinearLayout>

</LinearLayout>