...
                    android:layout_height="wrap_content"
                    android:duplicateParentState="true"
                    android:src="@drawable/icon_dialoguegroup_select"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/item_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/size01"
...
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/margin_10"
            android:duplicateParentState="true">

            <ImageView
                android:id="@+id/imgBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:visibility="gone" />

        </FrameLayout>
...
