...
                        android:layout_marginTop="@dimen/margin_10"
                        android:textColor="@color/color02"
                        android:textSize="@dimen/size01"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/contents_button_height"
                        android:layout_marginTop="@dimen/dp_10"
                        android:background="@{viewModel.isLoggedIn ? @drawable/button_bottomtitle : @drawable/button_agent_login}"
                        android:clickable="true"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:onClick="@{()-> viewModel.toggleLogin()}"
                        android:textColor="@color/text_selector_09"
                        android:textSize="@dimen/size03"
                        android:text="@{viewModel.isLoggedIn ? @string/logout : @string/login}" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="45dp"
...
